Update README.md
new ways to launch the app